fix? jumping when keyboard showup fix?

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,16 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  /* anti lag code */
+  /* XZ XZ MY COD anti jumping when claviatura on mobile*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 @media (max-width: 480px) {
